# gitverse

./: .gitignore  .pre-commit-config.yaml  CHANGELOG  MANIFEST.in  README.md  changelog.rst  changemaker.py  gen_docs.sh  generator.py  pyproject.toml  release_notes.rst  setup.cfg  setup.py  version.py
.github/workflows/: python-publish.yml
changemaker/: __init__.py  debugger.py  generator.py
doc_generator/: conf.py  index.rst
docs/: README.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: README.md.txt  index.rst.txt
gitverse/: __init__.py  commits.py  debugger.py  help.py  releases.py  requirements.txt
gitverse/models/: auth_bearer.py  callables.py  debugger.py
gitverse/utils/: rst.py
