[project]
name = "gitverse"
dynamic = ["version"]
description = "Python module to, generate well formatted commit notes from git commit history."
readme = "README.md"
authors = [{ name = "Vignesh Sivanandha Rao", email = "svignesh1793@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: MacOS :: MacOS X",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Version Control :: Git",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Topic :: Documentation :: Sphinx"
]
keywords = ["changelog", "automate", "commits", "releases"]
requires-python = ">=3.8"
dependencies = ["click", "requests", "python-dotenv"]

[tool.setuptools]
packages = ["gitverse"]

[tool.setuptools.dynamic]
version = {attr = "gitverse.version"}

[build-system]
requires      = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["pre-commit", "xmltodict"]

[project.scripts]
gitverse-commit = "gitverse.commits:main"
gitverse-release = "gitverse.releases:main"
gitverse = "gitverse.help:main"

[project.urls]
Homepage = "https://github.com/thevickypedia/gitverse"
Docs = "https://thevickypedia.github.io/gitverse/"
Source = "https://github.com/thevickypedia/gitverse"
"Bug Tracker" = "https://github.com/thevickypedia/gitverse/issues"
"Release Notes" = "https://github.com/thevickypedia/gitverse/blob/main/release_notes.rst"
