[project]
name = "gitverse"
dynamic = ["version"]
description = "Get GitHub's release notes or commit history and format it into `reStructuredText`/`Markdown` documents."
readme = "README.md"
authors = [{ name = "Vignesh Rao", email = "svignesh1793@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Version Control :: Git",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Documentation"
]
keywords = ["changelog", "automate", "commits", "releases"]
requires-python = ">=3.8"

[tool.setuptools]
packages = ["gitverse", "gitverse.models", "gitverse.utils"]

[tool.setuptools.dynamic]
version = {attr = "gitverse.version"}
dependencies = {file = ["gitverse/requirements.txt"]}

[build-system]
requires      = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["pre-commit", "xmltodict"]

[project.scripts]
gitverse-commit = "gitverse.commits:main"
gitverse-release = "gitverse.releases:main"
gitverse = "gitverse.help:main"

[project.urls]
Homepage = "https://github.com/thevickypedia/gitverse"
Docs = "https://thevickypedia.github.io/gitverse/"
Source = "https://github.com/thevickypedia/gitverse"
"Bug Tracker" = "https://github.com/thevickypedia/gitverse/issues"
"Release Notes" = "https://github.com/thevickypedia/gitverse/blob/main/release_notes.rst"
