[metadata]
name = changelog-generator
version = attr: version
description = 'Python module to, generate CHANGELOG from git commit history.',
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/thevickypedia/changelog-generator

[bdist_wheel]
universal = 1

[options]
packages = find:

[flake8]
ignore = D100
max_line_length = 100
exclude =
    doc_generator
    docs
    venv

# install flake8-docstrings
docstring_convention = google

# install flake8-sfs
extend_ignore=SFS3,D107,SFS301,D100,D104,D401

[isort]